# faze

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  flake.nix  install.ps1  install.sh  justfile  release.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
faze/: Cargo.toml
faze-cli/: Cargo.toml
faze-collector/: Cargo.toml
faze-server/: Cargo.toml
faze-tui/: Cargo.toml
glint/: Cargo.toml
glint-cli/: Cargo.toml
glint-cli/examples/: send_traces.rs
glint-cli/src/: cli.rs  main.rs
glint-cli/src/commands/: clean.rs  info.rs  logs.rs  mod.rs  serve.rs  traces.rs  tui.rs
glint-cli/tests/: integration_test.rs
glint-collector/: Cargo.toml  build.rs
glint-collector/proto/opentelemetry/proto/collector/logs/v1/: logs_service.proto
glint-collector/proto/opentelemetry/proto/collector/metrics/v1/: metrics_service.proto
glint-collector/proto/opentelemetry/proto/collector/trace/v1/: trace_service.proto
glint-collector/proto/opentelemetry/proto/logs/v1/: logs.proto
glint-collector/proto/opentelemetry/proto/metrics/v1/: metrics.proto
glint-collector/proto/opentelemetry/proto/resource/v1/: resource.proto
glint-collector/proto/opentelemetry/proto/trace/v1/: trace.proto
glint-collector/src/: convert.rs  grpc.rs  http.rs  lib.rs
glint-collector/src/convert/: logs.rs  metrics.rs  mod.rs  traces.rs
glint-collector/src/grpc/: logs.rs  metrics.rs  mod.rs  traces.rs
glint-server/: Cargo.toml
glint-server/src/: lib.rs  routes.rs  server.rs  ui.rs
glint-tui/: Cargo.toml
glint/src/: lib.rs
glint/src/models/: attributes.rs  log.rs  metric.rs  mod.rs  resource.rs  span.rs  trace.rs
glint/src/storage/: convert.rs  db_path.rs  mod.rs  schema.rs
glint/src/storage/sql/: logs.sql  metrics.sql  spans.sql
ui/: README.md  TODO.md  index.html  package.json  vite.config.ts
ui/src/: index.css  main.tsx  routeTree.gen.ts
ui/src/components/layout/: app-shell.tsx  main-sidebar.tsx  theme-toggle.tsx  top-bar.tsx
ui/src/components/shared/: attributes-viewer.tsx  command-palette.tsx  copy-button.tsx  duration-badge.tsx  error-state.tsx  loading-state.tsx  pagination.tsx  severity-badge.tsx  status-badge.tsx  toast-provider.tsx
ui/src/features/dashboard/components/: recent-traces.tsx  stat-card.tsx
ui/src/features/dashboard/hooks/: use-dashboard-data.ts
ui/src/features/logs/components/: log-entry.tsx  log-filters.tsx  logs-header.tsx  logs-list.tsx
ui/src/features/logs/hooks/: use-logs-data.ts
ui/src/features/metrics/components/: metric-card.tsx  metric-filters.tsx  metrics-grid.tsx  metrics-header.tsx
ui/src/features/metrics/hooks/: use-metrics-data.ts
ui/src/features/services/components/: service-card.tsx  service-chart.tsx  service-logs.tsx  service-metrics.tsx  service-overview.tsx  service-traces.tsx  services-header.tsx  services-list.tsx
ui/src/features/services/hooks/: use-service-details.ts  use-services-data.ts
ui/src/features/traces/components/: span-detail-dialog.tsx  span-detail-sheet.tsx  span-timeline-simple.tsx  span-timeline.tsx  span-tree.tsx  span-waterfall.tsx  trace-details.tsx  trace-filters.tsx  traces-header.tsx  traces-table.tsx
ui/src/features/traces/hooks/: use-trace-details.ts  use-traces-data.ts
ui/src/hooks/: use-auto-refresh.ts
ui/src/hooks/api/: index.ts  use-logs.ts  use-metrics.ts  use-services.ts  use-traces.ts
ui/src/lib/: colors.ts  constants.ts  query-client.ts  settings.ts  theme.ts
ui/src/lib/api/: client.ts
ui/src/lib/api/services/: index.ts  logs.ts  metrics.ts  services.ts  traces.ts
ui/src/lib/formatters/: duration.ts  index.ts  number.ts  time.ts
ui/src/routes/: __root.tsx  index.tsx
ui/src/routes/logs/: index.tsx
ui/src/routes/metrics/: index.tsx
ui/src/routes/services/: $serviceName.tsx  index.tsx
ui/src/routes/settings/: index.tsx
ui/src/routes/traces/: $traceId.tsx  index.tsx
ui/src/types/: common.ts  index.ts  log.ts  metric.ts  service.ts  trace.ts
