[workspace]
resolver = "2"
members = [
    "glint",
    "glint-collector",
    "glint-server",
    "glint-cli",
    "glint-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/ErickJ3/glint"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tonic = "0.14"
prost = "0.14"
duckdb = { version = "1.0", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.29"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
rust-embed = "8"
glint = { path = "glint" }
glint-collector = { path = "glint-collector" }
glint-server = { path = "glint-server" }

[profile.dev.package.libduckdb-sys]
opt-level = 3

[profile.dev.package."*"]
opt-level = 0

[profile.dev]
incremental = true
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
