[package]
name = "glint-cli"
version.workspace = true
edition.workspace = true
description = "Local-first observability for developers"
license = "MIT"
authors = ["Erick Jesus <erick.jesus2060@gmail.com>"]
homepage = "https://github.com/ErickJ3/glint"
repository = "https://github.com/ErickJ3/glint"
keywords = ["observability", "tracing", "otlp", "telemetry", "monitoring"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "glint"
path = "src/main.rs"

[features]
default = []
bundled = ["glint/bundled"]

[package.metadata.deb]
maintainer = "Erick J3 <erick@example.com>"
copyright = "2024, Erick J3 <erick@example.com>"
license-file = ["../LICENSE", "0"]
extended-description = """
Glint is a lightweight OTLP collector with a modern UI.
No Docker, no complex setup — just one binary.
Features:
- OTLP native (gRPC + HTTP)
- Smart project-based database management
- Beautiful terminal output
- Fast queries with DuckDB
"""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/glint", "usr/bin/", "755"],
    ["../README.md", "usr/share/doc/glint/README", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/glint", dest = "/usr/bin/glint", mode = "755" },
    { source = "../README.md", dest = "/usr/share/doc/glint/README", mode = "644" },
]

[dependencies]
glint.workspace = true
glint-collector.workspace = true
glint-server.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tonic.workspace = true
axum.workspace = true
