[package]
name = "glint-cli"
version.workspace = true
edition.workspace = true
description = "Local-first observability for developers"
license = "MIT"
authors = ["Erick Jesus <erick.jesus2060@gmail.com>"]
homepage = "https://github.com/ErickJ3/glint"
repository = "https://github.com/ErickJ3/glint"
keywords = ["observability", "tracing", "otlp", "telemetry", "monitoring"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "glint"
path = "src/main.rs"

[package.metadata.deb]
maintainer = "Erick Jesus <erick.jesus2060@gmail.com>"
copyright = "2025, Erick Jesus <erick.jesus2060@gmail.com>"
license-file = ["../LICENSE", "0"]
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/glint", "usr/bin/", "755"],
    ["../README.md", "usr/share/doc/glint/README", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/glint", dest = "/usr/bin/glint", mode = "755" },
    { source = "../README.md", dest = "/usr/share/doc/glint/README", mode = "644" },
]

[dependencies]
glint.workspace = true
glint-collector.workspace = true
glint-server.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tonic.workspace = true
axum.workspace = true
anyhow.workspace = true
