[package]
name = "glint-collector"
version.workspace = true
edition.workspace = true

[dependencies]
glint.workspace = true
tokio.workspace = true
tonic.workspace = true
tonic-prost = "0.14"
prost.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tower.workspace = true

[dev-dependencies]
futures = "0.3"

[build-dependencies]
tonic-prost-build = "0.14"
