[package]
name = "glint-server"
version.workspace = true
edition.workspace = true

[dependencies]
glint.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
rust-embed.workspace = true
